--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
-
+# mybatis
+mybatis.type-aliases-package=com.iotexample.demo.model
+mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.configuration.default-fetch-size=100
+mybatis.configuration.default-statement-timeout=3000
+#使用generator生成的时候需要加上
+mybatis.mapperLocations=classpath:mappers/*.xml,classpath*:**/mymappe/*.xml
+# mysql
+spring.datasource.url=jdbc:mysql://rm-uf6am9387z1pno7mmeo.mysql.rds.aliyuncs.com:3306/iot
+spring.datasource.username=root
+spring.datasource.password=0iWFH&Wk5idc
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#session存储类型
+spring.session.store-type=redis
+# 设置session超时时间
+spring.session.redis.flush-mode=on_save
+# Namespace for keys used to store sessions.
+spring.session.redis.namespace=spring:session
+#myredis
+spring.redis.host= localhost
+spring.redis.port=6379
