--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,16 +3,16 @@ mybatis.type-aliases-package=com.iotexample.demo.model
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.configuration.default-fetch-size=100
 mybatis.configuration.default-statement-timeout=3000
-#Ê¹ÓÃgeneratorÉú³ÉµÄÊ±ºòÐèÒª¼ÓÉÏ
+#Ê¹ï¿½ï¿½generatorï¿½ï¿½ï¿½Éµï¿½Ê±ï¿½ï¿½ï¿½ï¿½Òªï¿½ï¿½ï¿½ï¿½
 mybatis.mapperLocations=classpath:mappers/*.xml,classpath*:**/mymappe/*.xml
 # mysql
 spring.datasource.url=jdbc:mysql://rm-uf6am9387z1pno7mmeo.mysql.rds.aliyuncs.com:3306/iot
 spring.datasource.username=root
 spring.datasource.password=0iWFH&Wk5idc
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#session´æ´¢ÀàÐÍ
+#sessionï¿½æ´¢ï¿½ï¿½ï¿½ï¿½
 spring.session.store-type=redis
-# ÉèÖÃsession³¬Ê±Ê±¼ä
+# ï¿½ï¿½ï¿½ï¿½sessionï¿½ï¿½Ê±Ê±ï¿½ï¿½
 spring.session.redis.flush-mode=on_save
 # Namespace for keys used to store sessions.
 spring.session.redis.namespace=spring:session
