--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,20 @@ spring.session.redis.namespace=spring:session
 #myredis
 spring.redis.host= localhost
 spring.redis.port=6379
+#防止中文出现乱码
+spring.http.encoding.force=true
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+server.tomcat.uri-encoding=UTF-8
+#mongodb
+spring.data.mongodb.uri=mongodb://iotdemo:iot123456@47.100.35.6:27017/iotdemo
+#修改返回的时间为可读的形式，而不是时间戳 jackson使用，fastjson在webconfig中设置
+#spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+#spring.jackson.time-zone=GMT+8
+#redisConfig文件中的配置
+redis.host=localhost
+redis.port=6379
+redis.timeout=10
+redis.poolMaxTotal=1000
+redis.poolMaxIdle=500
+redis.poolMaxWait=500
