change databases and add new Controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,6 @@ redis.timeout=10
 redis.poolMaxTotal=1000
 redis.poolMaxIdle=500
 redis.poolMaxWait=500
+#小程序相关的配置
+wx.appId=wx1c3c2f33053fe976
+wx.appSecret=0cc3981c9d4f1b68ed5b84881d07b9f6
