--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,8 +27,8 @@ server.tomcat.uri-encoding=UTF-8
 #mongodb
 spring.data.mongodb.uri=mongodb://iotdemo:iot123456@47.100.35.6:27017/iotdemo
 #修改返回的时间为可读的形式，而不是时间戳 jackson使用，fastjson在webconfig中设置
-#spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
-#spring.jackson.time-zone=GMT+8
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=GMT+8
 #redisConfig文件中的配置
 redis.host=localhost
 redis.port=6379
