--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -17,7 +17,8 @@ spring.session.redis.flush-mode=on_save
 # Namespace for keys used to store sessions.
 spring.session.redis.namespace=spring:session
 #myredis
-spring.redis.host=localhost
+spring.redis.host=192.168.2.156
+spring.redis.password=123456
 spring.redis.port=6379
 #防止中文出现乱码
 spring.http.encoding.force=true
@@ -30,7 +31,8 @@ spring.data.mongodb.uri=mongodb://iotdemo:iot123456@47.100.35.6:27017/iotdemo
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 #redisConfig文件中的配置
-redis.host=localhost
+redis.host=192.168.2.156
+redis.password=123456
 redis.port=6379
 redis.timeout=10
 redis.poolMaxTotal=1000
@@ -46,3 +48,17 @@ spring.application.name=iotdemo
 logging.file=logs/${spring.application.name}.log
 # 设置高亮error/info日志输出
 spring.output.ansi.enabled=ALWAYS
+
+# 配置https
+#https端口号.
+server.port=8091
+#证书的路径.
+server.ssl.key-store=cert/keystore.p12
+#证书密码，请修改为您自己证书的密码.
+server.ssl.key-store-password=123456
+#秘钥库类型
+server.ssl.keyStoreType=PKCS12
+#证书别名
+server.ssl.keyAlias=tomcat
+#自定义的http端口
+http-port=8090
