change sth for https

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -49,14 +49,14 @@ spring.output.ansi.enabled=ALWAYS
 
 # 配置https
 #https端口号.
-server.port=8091
+server.port=8090
 #证书的路径.
-server.ssl.key-store=cert/keystore.p12
+server.ssl.key-store=keystore.p12
 #证书密码，请修改为您自己证书的密码.
 server.ssl.key-store-password=123456
 #秘钥库类型
 server.ssl.keyStoreType=PKCS12
 #证书别名
-server.ssl.keyAlias=tomcat
+#server.ssl.keyAlias=tomcat
 #自定义的http端口
-http-port=8090
+http-port=8080
