add check report

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,14 +39,11 @@ redis.poolMaxWait=500
 #小程序相关的配置
 wx.appId=wx1c3c2f33053fe976
 wx.appSecret=0cc3981c9d4f1b68ed5b84881d07b9f6
-
 spring.application.name=iotdemo
-
 # 推荐使用logging.file属性, 而不是 logging.path, 后者仅能指定日志文件的目录, 其文件名永远是spring.log
 logging.file=logs/${spring.application.name}.log
 # 设置高亮error/info日志输出
 spring.output.ansi.enabled=ALWAYS
-
 # 配置https
 #https端口号.
 server.port=8090
@@ -60,3 +57,6 @@ server.ssl.keyStoreType=PKCS12
 #server.ssl.keyAlias=tomcat
 #自定义的http端口
 http-port=8080
+# 开启所有actuator的http方式
+# management.server.port=8094
+management.endpoints.web.exposure.include=*
