--- a/src/main/resources/application-win.properties
+++ b/src/main/resources/application-win.properties
@@ -62,3 +62,5 @@ http-port=8080
 # 开启所有actuator的http方式
 # management.server.port=8094
 management.endpoints.web.exposure.include=*
+socketIO.host = localhost
+socketIO.port = 9090
