--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,3 +60,5 @@ http-port=8080
 # 开启所有actuator的http方式
 # management.server.port=8094
 management.endpoints.web.exposure.include=*
+socketIO.host = 0.0.0.0
+socketIO.port = 9090
